Дальше проверяем сервер

--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
   <title>Модовый сервер Minecraft</title>
-  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Добро пожаловать на наш модовый сервер Minecraft!</h1>
-  </header>
-
-  <section id="info">
-    <!-- Здесь будет информация из data.json -->
-  </section>
-
+  <h1>Добро пожаловать!</h1>
+  <p>Это сайт-визитка модового сервера Minecraft.</p>
+  <h2>IP сервера:</h2>
+  <p><b>play.adventuremc.ru</b></p>
+  <h2>Новости:</h2>
+  <ul>
+    <li>Запущен новый ивент на тему пиратов!</li>
+    <li>Обновлены моды до версии 1.18.2.</li>
+    <li>Добавлены новые квесты в лесах.</li>
+  </ul>
   <footer>
+    <hr>
     <p>© 2025 Любители приключений</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
