--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
   <p><b>play.adventuremc.ru</b></p>
   <h2>Новости:</h2>
   <ul>
-    <li>Запущен новый ивент на тему пиратов!</li>
-    <li>Обновлены моды до версии 1.18.2.</li>
-    <li>Добавлены новые квесты в лесах.</li>
+    <li>Новый всплеск драконов потряс Белую Поляну. Массовые разрушения привели к кризису в деревни. Торговцы снизил цены, в том числе и Монетчик.</li>
+    <li>Деревня медленно восстанавливается перед фестивалем, однако драконья угроза нависает над праздником. Путешественники, будьте готовы!</li>
+    <li>Старый Охотник на Драконов вернулся в деревню для собственного расследования. Он привез новые вещи для продажи, а также зарубил нападающего дракона в деревне.</li>
+  </ul>
+    <h2>Модпак:</h2>
+  <p>
+    <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer">
+      Скачать mods.zip с Google Диска
+    </a>
+  </p>
+
   </ul>
   <footer>
     <hr>
