--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
   <title>Модовый сервер Minecraft</title>
 </head>
 <body>
-  <h1>Добро пожаловать!</h1>
-  <p>Это сайт-визитка модового сервера Minecraft.</p>
-  <h2>IP сервера:</h2>
-  <p><b>play.adventuremc.ru</b></p>
-  <h2>Новости:</h2>
+  <h1>Добро пожаловать на наш модовый сервер Minecraft!</h1>
+  <h2>Любители приключений</h2>
+  <p>Уникальный модовый сервер с квестами и приключениями.</p>
+
+  <h3>IP сервера:</h3>
+  <p><b>62.60.230.20</b></p>
+
+  <h3>Новости сервера:</h3>
   <ul>
-    <li>Новый всплеск драконов потряс Белую Поляну. Массовые разрушения привели к кризису в деревни. Торговцы снизил цены, в том числе и Монетчик.</li>
-    <li>Деревня медленно восстанавливается перед фестивалем, однако драконья угроза нависает над праздником. Путешественники, будьте готовы!</li>
-    <li>Старый Охотник на Драконов вернулся в деревню для собственного расследования. Он привез новые вещи для продажи, а также зарубил нападающего дракона в деревне.</li>
+    <li>Мы стали SMP - поздравляю игроков со сменой типа сервера. Мы переходим и утверждаем роолевой формат сервера. Вы не только можете изучать мода, но и также ролить с другими участниками, фиксировать это. Мы не сможем как в текстовых РП отслеживать Ваш ролевой процесс полностью. Здесь Вас регулируют правила и собственная совесть. </li>
+    <li>Иконка сервера - изменена иконка сервера. Теперь в строке сетевой игры наш сервер выделяется костром.</li>
+    <li>Новые ивенты - Вас ожидают новые ивенты, торговцы и прочее. Все почти готова для интересных отыгрышей и приключений. </li>
   </ul>
-    <h2>Модпак:</h2>
+
+  <h3>Скачать моды</h3>
   <p>
-    <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer">
+    <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" 
+       target="_blank" rel="noopener noreferrer">
       Скачать mods.zip с Google Диска
     </a>
   </p>
 
-  </ul>
   <footer>
     <hr>
     <p>© 2025 Любители приключений</p>
