--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <p>
     <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" 
        target="_blank" rel="noopener noreferrer">
-      Скачать mods.zip с Google Диска
+      Скачать папку модов с Google Диска
     </a>
   </p>
 
   <footer>
     <hr>
-    <p>© 2025 Любители приключений</p>
+    <p>© Любители приключений, 2025</p>
   </footer>
 </body>
 </html>
