--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <footer>
     <hr>
-    <p>© Любители приключений, 2025</p>
+    <p>© Любители приключений 2025</p>
   </footer>
 </body>
 </html>
