--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Модовый сервер Minecraft</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
   <div class="main-content">
