Добавлен свод правил

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
+
+<nav style="padding: 15px; background-color: #4e2a0a; color: #f5e6c4; margin-bottom: 20px;">
+  <a href="index.html" style="color: #f5e6c4; margin-right: 20px; text-decoration: none;">Главная</a>
+  <a href="rules.html" style="color: #ff8c00; font-weight: bold; text-decoration: underline;">Правила</a>
+</nav>
+
   <div class="main-content">
     <h1>Добро пожаловать на наш модовый сервер Minecraft!</h1>
     <h2>Любители приключений</h2>
