--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-<nav style="padding: 15px; background-color: #4e2a0a; color: #f5e6c4; margin-bottom: 20px;">
-  <a href="index.html" style="color: #f5e6c4; margin-right: 20px; text-decoration: none;">Главная</a>
-  <a href="rules.html" style="color: #ff8c00; font-weight: bold; text-decoration: underline;">Правила</a>
+<nav class="sidebar-nav">
+  <a href="index.html" class="nav-button home-button">Главная</a>
+  <a href="rules.html" class="nav-button rules-button">Правила</a>
 </nav>
 
   <div class="main-content">
