--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
+  <nav class="top-nav">
+    <a href="index.html" class="active">Главная</a>
+    <a href="news.html">Новости</a>
+    <a href="rules.html">Правила</a>
+  </nav>
 
-<nav class="sidebar-nav">
-  <a href="index.html" class="nav-button home-button">Главная</a>
-  <a href="rules.html" class="nav-button rules-button">Правила</a>
-</nav>
-
-  <div class="main-content">
+  <div class="main-content" style="background: rgba(60, 30, 10, 0.85); border-radius: 12px; padding: 30px 40px; margin: 20px;">
     <h1>Добро пожаловать на наш модовый сервер Minecraft!</h1>
     <h2>Любители приключений</h2>
     <p>Уникальный модовый сервер с квестами и приключениями.</p>
@@ -34,14 +34,5 @@
       <p>© Любители приключений, 2025</p>
     </footer>
   </div>
-
-  <aside class="news-column">
-    <h3>Новости сервера</h3>
-    <div id="news-container">
-      <!-- Новости подгрузятся сюда -->
-    </div>
-  </aside>
-
-  <script src="script.js"></script>
 </body>
 </html>
