--- a/news.html
+++ b/news.html
@@ -8,11 +8,12 @@
   <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
-  <nav class="top-nav">
-    <a href="index.html">Главная</a>
-    <a href="news.html">Новости</a>
-    <a href="rules.html" class="active">Правила</a>
-  </nav>
+<nav class="side-nav">
+  <a href="index.html">Главная</a>
+  <a href="news.html" class="active">Новости</a>
+  <a href="rules.html">Правила</a>
+</nav>
+
 
   <div class="main-content" style="background: rgba(60, 30, 10, 0.85); border-radius: 12px; padding: 30px 40px; margin: 20px;">
     <h1>Правила сервера</h1>
