--- a/rules.html
+++ b/rules.html
@@ -8,10 +8,12 @@
   <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
-  <nav style="padding: 15px; background-color: #4e2a0a; color: #f5e6c4;">
-    <a href="index.html" style="color: #f5e6c4; margin-right: 20px; text-decoration: none;">Главная</a>
-    <a href="rules.html" style="color: #ff8c00; font-weight: bold; text-decoration: underline;">Правила</a>
-  </nav>
+<nav class="side-nav">
+  <a href="index.html">Главная</a>
+  <a href="news.html" class="active">Новости</a>
+  <a href="rules.html">Правила</a>
+</nav>
+
 
   <div class="main-content" style="background: rgba(60, 30, 10, 0.85); border-radius: 12px; padding: 30px 40px; margin: 20px;">
     <h1>Правила сервера</h1>
