Обновил новости, убрал ограничение блоков для новостей

--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Модовый сервер Minecraft</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="icon.png" type="image/png" />
-</head>
 <body>
-<nav class="side-nav">
-  <a href="index.html" class="active">Главная</a>
-  <a href="news.html">Новости</a>
-  <a href="rules.html">Правила</a>
-</nav>
+  <nav class="side-nav">
+    <a href="index.html" class="active">Главная</a>
+    <a href="news.html">Новости</a>
+    <a href="rules.html">Правила</a>
+  </nav>
 
-
-  <div class="main-content" style="background: rgba(60, 30, 10, 0.85); border-radius: 12px; padding: 30px 40px; margin: 20px;">
+  <div class="main-content">
     <h1>Добро пожаловать на наш модовый сервер Minecraft!</h1>
     <h2>Любители приключений</h2>
     <p>Уникальный модовый сервер с квестами и приключениями.</p>
@@ -23,9 +13,16 @@
     <h3>IP сервера:</h3>
     <p><b>62.60.230.20</b></p>
 
+    <h3>Discord сервер:</h3>
+    <p>
+      <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="download-link">
+        Присоединиться к нашему Discord
+      </a>
+    </p>
+
     <h3>Скачать моды</h3>
     <p>
-      <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" 
+      <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link"
          target="_blank" rel="noopener noreferrer" class="download-link">
         Скачать папку модов с Google Диска
       </a>
@@ -36,4 +33,3 @@
     </footer>
   </div>
 </body>
-</html>
