--- a/news.html
+++ b/news.html
@@ -3,26 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Правила сервера - Модовый сервер Minecraft</title>
+  <title>Новости сервера - Модовый сервер Minecraft</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
-<nav class="side-nav">
-  <a href="index.html">Главная</a>
-  <a href="news.html" class="active">Новости</a>
-  <a href="rules.html">Правила</a>
-</nav>
-
+  <nav class="side-nav">
+    <a href="index.html">Главная</a>
+    <a href="news.html" class="active">Новости</a>
+    <a href="rules.html">Правила</a>
+  </nav>
 
   <div class="main-content" style="background: rgba(60, 30, 10, 0.85); border-radius: 12px; padding: 30px 40px; margin: 20px;">
-    <h1>Правила сервера</h1>
-    <!-- Здесь вставьте текст правил, как в вашем предыдущем сообщении,
-         оформленный списками и заголовками -->
-    <!-- ... -->
+    <h1>Новости сервера</h1>
+    <div id="news-container">
+      <!-- Новости подгрузятся сюда -->
+    </div>
+
     <footer>
       <p>© Любители приключений, 2025</p>
     </footer>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
