Решил проблему с отображением главной страницы

--- a/news.html
+++ b/news.html
@@ -14,11 +14,9 @@
     <a href="rules.html">Правила</a>
   </nav>
 
-  <div class="main-content" style="background: rgba(60, 30, 10, 0.85); border-radius: 12px; padding: 30px 40px; margin: 20px;">
+  <div class="main-content">
     <h1>Новости сервера</h1>
-    <div id="news-container">
-      <!-- Новости подгрузятся сюда -->
-    </div>
+    <div id="news-container"></div>
 
     <footer>
       <p>© Любители приключений, 2025</p>
