--- a/rules.html
+++ b/rules.html
@@ -8,15 +8,15 @@
   <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
-<nav class="side-nav">
-  <a href="index.html">Главная</a>
-  <a href="news.html" class="active">Новости</a>
-  <a href="rules.html">Правила</a>
-</nav>
+  <nav class="side-nav">
+    <a href="index.html">Главная</a>
+    <a href="news.html">Новости</a>
+    <a href="rules.html" class="active">Правила</a>
+  </nav>
 
-
-  <div class="main-content" style="background: rgba(60, 30, 10, 0.85); border-radius: 12px; padding: 30px 40px; margin: 20px;">
+  <div class="main-content">
     <h1>Правила сервера</h1>
+
     <p>Пункты могут дополняться, видоизменяться в зависимости от ситуации. Следите внимательно за новостями и не забывайте, что не знание не освобождает от наказания!</p>
 
     <h2>▶ ПРАВИЛА ДИСКОРД СЕРВЕРА</h2>
@@ -62,10 +62,10 @@
       <li>双葉理央 (Футаба) - тех-админ, томящаяся пробка в электро-щитке;</li>
       <li>Grobberus - админ, узбогоитель, он допьет чай и будет смотреть, что ты там навертел.</li>
     </ul>
-  </div>
 
-  <footer>
-    <p>© Любители приключений, 2025</p>
-  </footer>
+    <footer>
+      <p>© Любители приключений, 2025</p>
+    </footer>
+  </div>
 </body>
 </html>
