--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Модовый сервер Minecraft</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="icon.png" type="image/png" />
+</head>
 <body>
   <nav class="side-nav">
     <a href="index.html" class="active">Главная</a>
@@ -33,3 +42,4 @@
     </footer>
   </div>
 </body>
+</html>
