--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       </a>
     </p>
 
+    <div class="button-group">
+      <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
+      <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
+    </div>
+
     <footer>
       <p>© Любители приключений, 2025</p>
     </footer>
