--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <h3>Discord сервер:</h3>
     <p>
-      <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">
+      <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="download-link">
         Присоединиться к нашему Discord
       </a>
     </p>
@@ -32,7 +32,7 @@
     <h3>Скачать моды</h3>
     <p>
       <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link"
-         target="_blank" rel="noopener noreferrer" class="main-button">
+         target="_blank" rel="noopener noreferrer" class="download-link">
         Скачать папку модов с Google Диска
       </a>
     </p>
@@ -41,10 +41,10 @@
       <p>© Любители приключений, 2025</p>
     </footer>
 
-    <div class="vk-chat-link">
-      <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer">
-        💬 Чат сервера ВКонтакте
-      </a>
+    <div class="button-group">
+      <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
+      <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
+      <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer" class="main-button">Чат ВКонтакте</a>
     </div>
   </div>
 </body>
