--- a/rules.html
+++ b/rules.html
@@ -19,7 +19,7 @@
 
     <p>Пункты могут дополняться, видоизменяться в зависимости от ситуации. Следите внимательно за новостями и не забывайте, что не знание не освобождает от наказания!</p>
 
-    <h2>▶ ПРАВИЛА ДИСКОРД СЕРВЕРА</h2>
+    <h2 class="rules-section-title">▶ ПРАВИЛА ДИСКОРД СЕРВЕРА</h2>
     <ul>
       <li>Как только Вы стали полноценным игроком нашего сервера, просим Вас поменять свой ник в Дискорде по данному шаблону: "Ник/Имя | Ник в майне".</li>
       <li>Запрещены конфликты. Личностные разногласия должны решаться между инициаторами конфликта, не касаясь непосредственно сервера. При продолжении накала конфликта, Администрация выдаст вам предупреждение. Если же инициаторы конфликта к нему не прислушаются, то к участникам конфликта будут применены меры воздействия (вплоть до бана).</li>
@@ -29,7 +29,7 @@
       <li>Запрещено обсуждение политики. Комментарии излишни.</li>
     </ul>
 
-    <h2>▶ ПРАВИЛА МАЙНКРАФТ СЕРВЕРА</h2>
+    <h2 class="rules-section-title">▶ ПРАВИЛА МАЙНКРАФТ СЕРВЕРА</h2>
     <ul>
       <li>Запрещены конфликты. Личностные разногласия должны решаться между инициаторами конфликта, не касаясь непосредственно сервера. При продолжении накала конфликта, Администрация выдаст вам предупреждение. Если же инициаторы конфликта к нему не прислушаются, то к участникам конфликта будут применены меры воздействия (вплоть до бана).</li>
       <li>Запрещено обсуждение политики. Комментарии излишни.</li>
@@ -41,7 +41,7 @@
       <li>Запрещено ломать научный-центр как лорно-важную постройку. Научный центр охватывает существенную площадь с -224 53 -280 по -211 64 -201 координату. Также мы настоятельно просим удержаться фантомами от любопыства и протискиваться сквозь закрытые комнаты Научного центра. Мы понимаем Ваше желание, а Вы поймите наше нежелание вводить ограничения на эту зону. Нам будет намного сложнее установить приват, нежели Вас просить.</li>
     </ul>
 
-    <h2>▶ ПРАВИЛА ДЛЯ РП НА МАЙНКРАФТ СЕРВЕРЕ</h2>
+    <h2 class="rules-section-title">▶ ПРАВИЛА ДЛЯ РП НА МАЙНКРАФТ СЕРВЕРЕ</h2>
     <ul>
       <li>Перед тем как вступить в РП отыгрыш, мы просим Вас заполнить специальную анкету в разделе #анкеты-персонажей на Вашего персонажа, чтобы игроки понимали, с кем они имеют дело.</li>
       <li>Рейтинг сервера — 18+. В рамках рейтинга R допускается умеренное описание сцен насилия и жестокости. Отыгрыш сексуального характера строго запрещен. Убийство персонажей разрешено только при обоюдном согласии участников.</li>
@@ -55,7 +55,7 @@
       <li>Также администрация просит игроков вести записи произошедших рп-сцен. Для чего это нужно: освежить память + рассказать остальным + прочувствовать своего персонажа. Как Вы это можете реализовать: вести дневниковые записи в любом удобном Вам формате, даже в заметках телефона, однако вести эти заметки исключительно от лица ПЕРСОНАЖЕЙ. Как он видит, как он чувствует и прочее – Вы решаете сами. Длина и содержание заметок лежит полностью на плечах вашего персонажа.</li>
     </ul>
 
-    <h2>▶ АДМИНИСТРАЦИЯ</h2>
+    <h2 class="rules-section-title">▶ АДМИНИСТРАЦИЯ</h2>
     <ul>
       <li>DexGarden - глав. админ, вечный двигатель, живущий на реактивной тяге своего горящего пукана;</li>
       <li>KeinCriper - админ, креативщик, идейник, все сюжеты зависят от него;</li>
