--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
     <h3>IP сервера:</h3>
     <p><b>62.60.230.20</b></p>
 
+
+
+    <!-- Кнопки над футером -->
     <div class="button-group">
       <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
       <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
       <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer" class="main-button">Чат ВКонтакте</a>
-    
-	    <footer>
-		<p>© Любители приключений, 2025</p>
-		</footer>
-	</div>
+    </div>
   </div>
+
+  <footer>
+    <p>© Любители приключений, 2025</p>
+  </footer>
 </body>
 </html>
