--- a/rules.html
+++ b/rules.html
@@ -1,71 +1,147 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Правила сервера - Модовый сервер Minecraft</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="icon.png" type="image/png" />
-</head>
-<body>
-  <nav class="side-nav">
-    <a href="index.html">Главная</a>
-    <a href="news.html">Новости</a>
-    <a href="rules.html" class="active">Правила</a>
-  </nav>
+body {
+  margin: 0;
+  font-family: 'Georgia', serif;
+  display: flex;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #2c1a0f, #4e2a0a);
+  color: #f5e6c4;
+  flex-direction: row;
+}
 
-  <div class="main-content">
-    <h1>Правила сервера</h1>
+/* Вертикальное меню слева */
+nav.side-nav {
+  display: flex;
+  flex-direction: column;
+  background-color: #4e2a0a;
+  padding: 20px;
+  border-radius: 0 12px 12px 0;
+  width: 180px;
+  box-shadow: 2px 0 10px rgba(255, 140, 0, 0.4);
+  height: 100vh;
+  position: sticky;
+  top: 0;
+}
 
-    <p>Пункты могут дополняться, видоизменяться в зависимости от ситуации. Следите внимательно за новостями и не забывайте, что не знание не освобождает от наказания!</p>
+nav.side-nav a {
+  padding: 12px 20px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  border-radius: 8px;
+  text-decoration: none;
+  color: #ff8c00;
+  background-color: rgba(255, 140, 0, 0.15);
+  box-shadow: 0 0 8px rgba(255, 140, 0, 0.3);
+  transition: background-color 0.3s, color 0.3s;
+  cursor: pointer;
+}
 
-    <h2 class="rules-section-title">▶ ПРАВИЛА ДИСКОРД СЕРВЕРА</h2>
-    <ul>
-      <li>Как только Вы стали полноценным игроком нашего сервера, просим Вас поменять свой ник в Дискорде по данному шаблону: "Ник/Имя | Ник в майне".</li>
-      <li>Запрещены конфликты. Личностные разногласия должны решаться между инициаторами конфликта, не касаясь непосредственно сервера. При продолжении накала конфликта, Администрация выдаст вам предупреждение. Если же инициаторы конфликта к нему не прислушаются, то к участникам конфликта будут применены меры воздействия (вплоть до бана).</li>
-      <li>Запрещена реклама. На территории сервера запрещена реклама, пока Администратором не будет выдано разрешение.</li>
-      <li>Контент 18+ может поститься исключительно в специализированном канале #запрещенка-🔞. В остальных случаях сообщения будут удаляться, а участникам выдаваться предупреждение, а затем бан.</li>
-      <li>Запрещен выход из дискорд сервера, пока вы играете на сервере в майнкрафте. Если вы выходите с Дискорд сервера, то вы автоматически покидаете проект, и если будете планировать возвращаться, то придется возвращаться на правах новенького.</li>
-      <li>Запрещено обсуждение политики. Комментарии излишни.</li>
-    </ul>
+nav.side-nav a:hover {
+  background-color: rgba(255, 140, 0, 0.35);
+  color: #fff3d1;
+}
 
-    <h2 class="rules-section-title">▶ ПРАВИЛА МАЙНКРАФТ СЕРВЕРА</h2>
-    <ul>
-      <li>Запрещены конфликты. Личностные разногласия должны решаться между инициаторами конфликта, не касаясь непосредственно сервера. При продолжении накала конфликта, Администрация выдаст вам предупреждение. Если же инициаторы конфликта к нему не прислушаются, то к участникам конфликта будут применены меры воздействия (вплоть до бана).</li>
-      <li>Запрещено обсуждение политики. Комментарии излишни.</li>
-      <li>Запрещена агитация, реклама и прочее в любых формах его проявления.</li>
-      <li>Ивенты из разрядов важных рейд-боссов или структур согласовываются коллективно. Есть несколько важных ивентов как в ванильном майнкрафте, так и в некоторых модах. Это не маленькие эпизоды, а целые события для сервера. Администрация приняла решения время и даты проведения подобных ивентов согласовывать с игроками. Сбор игроков позволит закрыть гештальты желающим. Вы – не одни на сервере, вас целое множество.</li>
-      <li>Любое умышленное причинение вреда запрещено. В его перечень которого в особенности входит гриферство, убийства как игроков, питомцев и мобов на чьей-либо территории, воровство. Относитесь к вещам и творениям других так, как будто за нарушение чужого пространства. Сюда не входят действия, имеющие своей целью шутку или до тех пор, пока обе стороны дозволяют подобное.</li>
-      <li>Запрещено использование читов, ресурспаков и прочих программ для обеспечения явного преимущества над другими игроками, а также создавать лаг-машины, делать прочие непотребства для умертвления сервера.</li>
-      <li>Изменить расу Вы имеете право только один раз! Обращайтесь к админу за сферами.</li>
-      <li>Запрещено ломать научный-центр как лорно-важную постройку. Научный центр охватывает существенную площадь с -224 53 -280 по -211 64 -201 координату. Также мы настоятельно просим удержаться фантомами от любопыства и протискиваться сквозь закрытые комнаты Научного центра. Мы понимаем Ваше желание, а Вы поймите наше нежелание вводить ограничения на эту зону. Нам будет намного сложнее установить приват, нежели Вас просить.</li>
-    </ul>
+nav.side-nav a.active {
+  color: #cc7a00;
+  text-decoration: underline;
+  background-color: rgba(204, 122, 0, 0.25);
+  box-shadow: 0 0 10px rgba(204, 122, 0, 0.5);
+}
 
-    <h2 class="rules-section-title">▶ ПРАВИЛА ДЛЯ РП НА МАЙНКРАФТ СЕРВЕРЕ</h2>
-    <ul>
-      <li>Перед тем как вступить в РП отыгрыш, мы просим Вас заполнить специальную анкету в разделе #анкеты-персонажей на Вашего персонажа, чтобы игроки понимали, с кем они имеют дело.</li>
-      <li>Рейтинг сервера — 18+. В рамках рейтинга R допускается умеренное описание сцен насилия и жестокости. Отыгрыш сексуального характера строго запрещен. Убийство персонажей разрешено только при обоюдном согласии участников.</li>
-      <li>Все RP-убийства идут через договорённость игроков между друг-другом! Просто так Вы не можете убить игрока и сказать: "Все, теперь ты умер!". В шутку в рамках игры – да, но не в рп-составляющей. «Убитый персонаж» может играть на майнкрафт-сервере, но уже не участвовать во многих рп-моментах, ибо будет засчитан за «призрака»\«духа»\«буквально зомби» и подобное, кои взаимодействует с игроками минимально. Если Вы сомневаетесь в такой сцене и\или Вам непонятны границы возможностей «убитого персонажа», Вы можете обратиться к администрации. Мы выслушаем Ваше виденье, обсудим правила и разберем варианты. Мы открыты к диалогу в любом его формате.</li>
-      <li>В майнкрафте логика – это интересный предмет. Вроде она есть, а вроде ее нет. Мы не дотошные до весовых категорий, роста Ваших персонажей в отыгрыше, почему эндериан проходит сквозь обычные двери, а таракан может оседлать дракона и прочее, но если Ваш персонаж указан как профи-убийца, а его пытается одолеть кот, кои держит впервые оружие, то стоит задуматься о качестве Вашего отыгрыша. Этот грубый пример не только призывает Вас обсудить, задуматься о действиях Вашего персонажа, но и также касается еще одного важного правила.</li>
-      <li>Марти и Мэри-Сью запрещены.</li>
-      <li>Мы не можем регулировать Ваш отыгрыш и быть постоянным наблюдателями, ГМами. Мы даем Вам свободу в отыгрыше различных сцен. Вы сами себе судьи в ваших РП-ивентах, однако мы призываем игроков задуматься, как решать спорные или иные моменты, особенно это касается битв, запланированных или нет конфликтов между персонажами и прочее. Мы не хотим вводить общую универсальную систему решения подобных ситуаций, например, как через дайсы. Каждый игрок или каждая группа игроков сами решают, как они будут решать ту или иную ситуацию. Если же у Вас возникли сомнения, Вам нужен совет как лучше или Вам необходим кто-то со стороны для наблюдения и прочее – Вы всегда имеете право обратиться к администрации. Мы с радостью Вас поддержим, поможем и выскажемся.</li>
-      <li>Будьте готовы к тому, что за вами будут наблюдать, ведь есть желающие посмотреть, что происходит в вашем RP.</li>
-      <li>Если вы находитесь в RP-войсах, то проявите уважение и не прерывайте RP-момент. Если Вы хотите что-то спросить (например: Могу ли я присоединиться, что происходит и тому подобное), то лучше напишите одному из Ролевиков, или же дождитесь подходящего момента, чтобы спросить голосом.</li>
-      <li>Когда идет RP-момент и Вы не ролите, а наблюдаете - Выключайте микрофон.</li>
-      <li>Также администрация просит игроков вести записи произошедших рп-сцен. Для чего это нужно: освежить память + рассказать остальным + прочувствовать своего персонажа. Как Вы это можете реализовать: вести дневниковые записи в любом удобном Вам формате, даже в заметках телефона, однако вести эти заметки исключительно от лица ПЕРСОНАЖЕЙ. Как он видит, как он чувствует и прочее – Вы решаете сами. Длина и содержание заметок лежит полностью на плечах вашего персонажа.</li>
-    </ul>
+/* Основной контент занимает всё пространство кроме меню и футера */
+.main-content {
+  flex: 1;
+  padding: 30px 40px;
+  box-sizing: border-box;
+  background: rgba(60, 30, 10, 0.85);
+  box-shadow: 0 0 20px rgba(255, 140, 0, 0.6);
+  border-radius: 12px;
+  margin: 20px;
+  line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  /* Чтобы кнопки были внизу */
+  justify-content: flex-start;
+}
 
-    <h2 class="rules-section-title">▶ АДМИНИСТРАЦИЯ</h2>
-    <ul>
-      <li>DexGarden - глав. админ, вечный двигатель, живущий на реактивной тяге своего горящего пукана;</li>
-      <li>KeinCriper - админ, креативщик, идейник, все сюжеты зависят от него;</li>
-      <li>双葉理央 (Футаба) - тех-админ, томящаяся пробка в электро-щитке;</li>
-      <li>Grobberus - админ, узбогоитель, он допьет чай и будет смотреть, что ты там навертел.</li>
-    </ul>
+/* Кнопки располагаются в одну строку, над футером */
+.button-group {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  margin-top: auto; /* Выталкивает кнопки к низу main-content */
+  margin-bottom: 20px;
+  flex-wrap: nowrap;
+  flex-shrink: 0;
+}
 
-    <footer>
-      <p>© Любители приключений, 2025</p>
-    </footer>
-  </div>
-</body>
-</html>
+/* Стиль кнопок */
+.main-button {
+  background: linear-gradient(135deg, #ff8c00, #ffa733);
+  color: #3b1f00;
+  font-weight: bold;
+  padding: 14px 28px;
+  border-radius: 12px;
+  text-decoration: none;
+  box-shadow: 0 4px 10px rgba(255, 140, 0, 0.6);
+  transition: background 0.3s, box-shadow 0.3s;
+  user-select: none;
+  display: inline-block;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.main-button:hover,
+.main-button:focus {
+  background: linear-gradient(135deg, #ffa733, #ffb84d);
+  box-shadow: 0 6px 15px rgba(255, 183, 77, 0.8);
+  outline: none;
+}
+
+/* Футер с линией сверху */
+footer {
+  text-align: center;
+  padding: 20px 10px;
+  font-size: 0.9em;
+  color: #d9c9a3;
+  border-top: 2px solid rgba(255, 140, 0, 0.6); /* линия-разделитель */
+  margin: 0 20px 20px 20px;
+  text-shadow: 0 0 3px #ff8c00;
+  flex-shrink: 0;
+}
+
+/* Остальные стили (новости, кнопки загрузок и т.п.) оставьте без изменений */
+
+/* Адаптив для мобильных устройств */
+@media (max-width: 768px) {
+  body {
+    flex-direction: column;
+  }
+  nav.side-nav {
+    flex-direction: row;
+    width: 100%;
+    height: auto;
+    border-radius: 0 0 12px 12px;
+    box-shadow: 0 2px 10px rgba(255, 140, 0, 0.4);
+    padding: 10px 0;
+    justify-content: center;
+    gap: 20px;
+    position: relative;
+  }
+  nav.side-nav a {
+    margin-bottom: 0;
+    padding: 10px 15px;
+  }
+  .main-content {
+    margin: 10px 15px;
+    max-width: 100%;
+    border-radius: 12px;
+    min-height: auto;
+  }
+  .button-group {
+    flex-wrap: wrap;
+  }
+  footer {
+    margin: 10px 15px 20px 15px;
+  }
+}
