--- a/index.html
+++ b/index.html
@@ -14,26 +14,40 @@
     <a href="rules.html">Правила</a>
   </nav>
 
-  <div class="main-content">
-    <h1>Добро пожаловать на наш модовый сервер Minecraft!</h1>
-    <h2>Любители приключений</h2>
-    <p>Уникальный модовый сервер с квестами и приключениями.</p>
+  <div class="content-wrapper">
+    <div class="main-content">
+      <h1>Добро пожаловать на наш модовый сервер Minecraft!</h1>
+      <h2>Любители приключений</h2>
+      <p>Уникальный модовый сервер с квестами и приключениями.</p>
 
-    <h3>IP сервера:</h3>
-    <p><b>62.60.230.20</b></p>
+      <h3>IP сервера:</h3>
+      <p><b>62.60.230.20</b></p>
 
+      <h3>Discord сервер:</h3>
+      <p>
+        <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="download-link">
+          Присоединиться к нашему Discord
+        </a>
+      </p>
 
+      <h3>Скачать моды</h3>
+      <p>
+        <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link"
+           target="_blank" rel="noopener noreferrer" class="download-link">
+          Скачать папку модов с Google Диска
+        </a>
+      </p>
 
-    <!-- Кнопки над футером -->
-    <div class="button-group">
-      <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
-      <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
-      <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer" class="main-button">Чат ВКонтакте</a>
+      <div class="button-group">
+        <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
+        <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
+        <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer" class="main-button">Чат ВКонтакте</a>
+      </div>
     </div>
-  </div>
 
-  <footer>
-    <p>© Любители приключений, 2025</p>
-  </footer>
+    <footer>
+      <p>© Любители приключений, 2025</p>
+    </footer>
+  </div>
 </body>
 </html>
