--- a/index.html
+++ b/index.html
@@ -15,28 +15,14 @@
   </nav>
 
   <div class="content-wrapper">
-    <div class="main-content">
-      <h1>Добро пожаловать на наш модовый сервер Minecraft!</h1>
-      <h2>Любители приключений</h2>
-      <p>Уникальный модовый сервер с квестами и приключениями.</p>
+	<div class="server-description">
+	<p>
+		<strong>Любители приключений</strong> — это дружелюбный модовый сервер Minecraft с уникальными квестами и активным ролевым сообществом. Мы создаём атмосферу взаимного уважения и сотрудничества, где каждый игрок может погрузиться в захватывающий игровой процесс.
+	</p>
+	</div>
 
-      <h3>IP сервера:</h3>
-      <p><b>62.60.230.20</b></p>
-
-      <h3>Discord сервер:</h3>
-      <p>
-        <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="download-link">
-          Присоединиться к нашему Discord
-        </a>
-      </p>
-
-      <h3>Скачать моды</h3>
-      <p>
-        <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link"
-           target="_blank" rel="noopener noreferrer" class="download-link">
-          Скачать папку модов с Google Диска
-        </a>
-      </p>
+	<h3 class="server-ip-title">IP сервера:</h3>
+	<p class="server-ip">62.60.230.20</p>
 
       <div class="button-group">
         <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
