--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
   </nav>
 
   <div class="content-wrapper">
-	<div class="server-description">
-	<p>
-		<strong>Любители приключений</strong> — это дружелюбный модовый сервер Minecraft с уникальными квестами и активным ролевым сообществом. Мы создаём атмосферу взаимного уважения и сотрудничества, где каждый игрок может погрузиться в захватывающий игровой процесс.
-	</p>
-	</div>
+    <div class="main-content">
+      <h1>Добро пожаловать на наш модовый сервер Minecraft, Игрок!</h1>
+      <h2></h2>
+      <p>Любители приключений — это дружелюбный модовый сервер Minecraft с уникальными квестами и активным ролевым сообществом. Мы создаём атмосферу взаимного уважения и сотрудничества, где каждый игрок может погрузиться в захватывающий игровой процесс.</p>
 
-	<h3 class="server-ip-title">IP сервера:</h3>
-	<p class="server-ip">62.60.230.20</p>
+      <h3>IP сервера:</h3>
+      <p class="server-ip"><b>62.60.230.20</b></p>
 
       <div class="button-group">
         <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
