--- a/news.html
+++ b/news.html
@@ -18,11 +18,13 @@
     <div class="main-content">
       <h1>Новости сервера</h1>
       <div id="news-container"></div>
-    </div>
 
-    <footer>
-      <p>© Любители приключений, 2025</p>
-    </footer>
+      <hr class="footer-separator" />
+
+      <footer>
+        <p>© Любители приключений, 2025</p>
+      </footer>
+    </div>
   </div>
 
   <script src="script.js"></script>
