--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
         <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
         <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer" class="main-button">Чат ВКонтакте</a>
       </div>
-    </div>
 
-    <footer>
-      <p>© Любители приключений, 2025</p>
-    </footer>
+      <hr class="footer-separator" />
+
+      <footer>
+        <p>© Любители приключений, 2025</p>
+      </footer>
+    </div>
   </div>
 </body>
 </html>
