--- a/rules.html
+++ b/rules.html
@@ -42,32 +42,20 @@
         <li>Запрещено ломать научный-центр как лорно-важную постройку. Научный центр охватывает существенную площадь с -224 53 -280 по -211 64 -201 координату. Также мы настоятельно просим удержаться фантомами от любопыства и протискиваться сквозь закрытые комнаты Научного центра. Мы понимаем Ваше желание, а Вы поймите наше нежелание вводить ограничения на эту зону. Нам будет намного сложнее установить приват, нежели Вас просить.</li>
       </ul>
 
-      <h2 class="rules-section-title">▶ ПРАВИЛА ДЛЯ РП НА МАЙНКРАФТ СЕРВЕРЕ</h2>
-      <ul>
-        <li>Перед тем как вступить в РП отыгрыш, мы просим Вас заполнить специальную анкету в разделе #анкеты-персонажей на Вашего персонажа, чтобы игроки понимали, с кем они имеют дело.</li>
-        <li>Рейтинг сервера — 18+. В рамках рейтинга R допускается умеренное описание сцен насилия и жестокости. Отыгрыш сексуального характера строго запрещен. Убийство персонажей разрешено только при обоюдном согласии участников.</li>
-        <li>Все RP-убийства идут через договорённость игроков между друг-другом! Просто так Вы не можете убить игрока и сказать: "Все, теперь ты умер!". В шутку в рамках игры – да, но не в рп-составляющей. «Убитый персонаж» может играть на майнкрафт-сервере, но уже не участвовать во многих рп-моментах, ибо будет засчитан за «призрака»\«духа»\«буквально зомби» и подобное, кои взаимодействует с игроками минимально. Если Вы сомневаетесь в такой сцене и\или Вам непонятны границы возможностей «убитого персонажа», Вы можете обратиться к администрации. Мы выслушаем Ваше виденье, обсудим правила и разберем варианты. Мы открыты к диалогу в любом его формате.</li>
-        <li>В майнкрафте логика – это интересный предмет. Вроде она есть, а вроде ее нет. Мы не дотошные до весовых категорий, роста Ваших персонажей в отыгрыше, почему эндериан проходит сквозь обычные двери, а таракан может оседлать дракона и прочее, но если Ваш персонаж указан как профи-убийца, а его пытается одолеть кот, кои держит впервые оружие, то стоит задуматься о качестве Вашего отыгрыша. Этот грубый пример не только призывает Вас обсудить, задуматься о действиях Вашего персонажа, но и также касается еще одного важного правила.</li>
-        <li>Марти и Мэри-Сью запрещены.</li>
-        <li>Мы не можем регулировать Ваш отыгрыш и быть постоянным наблюдателями, ГМами. Мы даем Вам свободу в отыгрыше различных сцен. Вы сами себе судьи в ваших РП-ивентах, однако мы призываем игроков задуматься, как решать спорные или иные моменты, особенно это касается битв, запланированных или нет конфликтов между персонажами и прочее. Мы не хотим вводить общую универсальную систему решения подобных ситуаций, например, как через дайсы. Каждый игрок или каждая группа игроков сами решают, как они будут решать ту или иную ситуацию. Если же у Вас возникли сомнения, Вам нужен совет как лучше или Вам необходим кто-то со стороны для наблюдения и прочее – Вы всегда имеете право обратиться к администрации. Мы с радостью Вас поддержим, поможем и выскажемся.</li>
-        <li>Будьте готовы к тому, что за вами будут наблюдать, ведь есть желающие посмотреть, что происходит в вашем RP.</li>
-        <li>Если вы находитесь в RP-войсах, то проявите уважение и не прерывайте RP-момент. Если Вы хотите что-то спросить (например: Могу ли я присоединиться, что происходит и тому подобное), то лучше напишите одному из Ролевиков, или же дождитесь подходящего момента, чтобы спросить голосом.</li>
-        <li>Когда идет RP-момент и Вы не ролите, а наблюдаете - Выключайте микрофон.</li>
-        <li>Также администрация просит игроков вести записи произошедших рп-сцен. Для чего это нужно: освежить память + рассказать остальным + прочувствовать своего персонажа. Как Вы это можете реализовать: вести дневниковые записи в любом удобном Вам формате, даже в заметках телефона, однако вести эти заметки исключительно от лица ПЕРСОНАЖЕЙ. Как он видит, как он чувствует и прочее – Вы решаете сами. Длина и содержание заметок лежит полностью на плечах вашего персонажа.</li>
-      </ul>
-
-      <h2 class="rules-section-title">▶ АДМИНИСТРАЦИЯ</h2>
+     <h2 class="rules-section-title">▶ АДМИНИСТРАЦИЯ</h2>
       <ul>
         <li>DexGarden - глав. админ, вечный двигатель, живущий на реактивной тяге своего горящего пукана;</li>
         <li>KeinCriper - админ, креативщик, идейник, все сюжеты зависят от него;</li>
         <li>双葉理央 (Футаба) - тех-админ, томящаяся пробка в электро-щитке;</li>
         <li>Grobberus - админ, узбогоитель, он допьет чай и будет смотреть, что ты там навертел.</li>
       </ul>
-    </div>
 
-    <footer>
-      <p>© Любители приключений, 2025</p>
-    </footer>
+      <hr class="footer-separator" />
+
+      <footer>
+        <p>© Любители приключений, 2025</p>
+      </footer>
+    </div>
   </div>
 </body>
 </html>
