--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="index.html" class="active">Главная</a>
     <a href="news.html">Новости</a>
     <a href="rules.html">Правила</a>
+	
+	<a href="admin.html" class="side-nav-admin-button">Вход в админку</a>
   </nav>
 
   <div class="content-wrapper">
